# nixpkgs-failure-dashboard

./: .gitignore  LICENSE  README.md  build-all-packages.sh  collect-packages.nix  default.nix  flake.nix  index.html  package.json  pnpm-lock.yaml  pyproject.toml  run-build.sh  vite.config.ts
app/: classify.py  config.py  db.py  main.py  models.py  tagging.py
src/: App.scss  App.tsx  main.tsx
