[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nixpkgs-failure-dashboard"
version = "0.0.1"
description = "Simple log indexer for nixpkgs builds"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "sqlalchemy",
  "uvicorn"
]

[project.scripts]
nixpkgs-failure-dashboard = "app.main:main"
classify-build-logs = "app.classify:main"

[project.optional-dependencies]
dev = [ "black", "isort", "fastapi-cli" ]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 79
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["app"]
multi_line_output = 3
include_trailing_comma = true
